# EmbeddedUtilityLibraries

./: .clang-format  .clang-tidy  .clang_complete  .codecov.yml  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  ITimer_8hpp_source.html  Makefile  README.md  ability_8hpp_source.html  access_8hpp_source.html  allocation__header_8hpp_source.html  annotated.html  annotated_dup.js  assert_8hpp_source.html  bind__type_8hpp_source.html  binded__traits_8hpp_source.html  block__fifo_8hpp_source.html  call_8hpp_source.html  classes.html  classeul_1_1container_1_1iterator_1_1index__const__iterator-members.html  classeul_1_1container_1_1iterator_1_1index__const__iterator.html  classeul_1_1container_1_1iterator_1_1index__const__iterator.js  classeul_1_1container_1_1iterator_1_1index__iterator-members.html  classeul_1_1container_1_1iterator_1_1index__iterator.html  classeul_1_1container_1_1iterator_1_1index__iterator.js  classeul_1_1container_1_1list.html  classeul_1_1container_1_1list__node-members.html  classeul_1_1container_1_1list__node.html  classeul_1_1container_1_1observing__list-members.html  classeul_1_1container_1_1observing__list.html  classeul_1_1container_1_1observing__list.js  classeul_1_1container_1_1observing__node-members.html  classeul_1_1container_1_1observing__node.html  classeul_1_1container_1_1observing__node.js  (+530 more)
cmake/: GitModules.cmake
docs/: Doxyfile.in  contribution.md
examples/: CMakeLists.txt
include/eul/execution/: CMakeLists.txt  execution_queue.hpp  fwd.hpp  i_execution_queue.hpp
include/eul/kernel/: CMakeLists.txt  event_listener.hpp  fwd.hpp  kernel.hpp  module.hpp  typeid.hpp
include/eul/logger/: CMakeLists.txt  logger.hpp  logger_factory.hpp  logger_policy.hpp  logger_printer.hpp  logger_stream.hpp  logger_stream_registry.hpp  logger_traits.hpp  suppressing_logger.hpp
include/eul/mpl/: CMakeLists.txt  filter.hpp  inherit_from.hpp
include/eul/mpl/mixin/: CMakeLists.txt  ability.hpp  access.hpp  base.hpp  const_access.hpp  data.hpp  filter.hpp  inherit_from.hpp  interface.hpp  mixin.hpp  name.hpp  object.hpp  type.hpp
include/eul/mpl/tuples/: CMakeLists.txt  extend.hpp  filter.hpp  for_each.hpp
include/eul/mpl/types/: CMakeLists.txt  bind_type.hpp  binded_traits.hpp  get_index_of_binded_key.hpp
include/eul/signals/: CMakeLists.txt  signal.hpp  slot.hpp
include/eul/std/: CMakeLists.txt  cmath  cstddef  cstdint  cstring  ctime  exception  iostream  stdexcept  type_traits  utility
include/eul/time/: CMakeLists.txt  ITimeProvider.hpp  fwd.hpp  i_time_provider.hpp
include/eul/timer/: CMakeLists.txt  ITimeProvider.hpp  ITimer.hpp  interval_timer.hpp  observed_timer.hpp  timeout_timer.hpp  timer.hpp  timer_manager.hpp
lib/: CMakeLists.txt
lib/gsl/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  (+27 more)
source/container/: CMakeLists.txt
source/crc/: CMakeLists.txt
source/error/: CMakeLists.txt  error_category.cpp  error_code.cpp  error_condition.cpp  generic_category.cpp  system_category.cpp
source/execution/: CMakeLists.txt
source/filesystem/: CMakeLists.txt  path.cpp  path_const_iterator.cpp
source/functional/: CMakeLists.txt
source/iterator/: CMakeLists.txt
source/logger/: CMakeLists.txt  logger_factory.cpp  logger_printer.cpp  logger_stream.cpp  logger_stream_registry.cpp
source/memory/: CMakeLists.txt
source/memory/pool/: CMakeLists.txt
source/mpl/mixin/: CMakeLists.txt
source/mpl/types/: CMakeLists.txt
source/time/: CMakeLists.txt
source/timer/: CMakeLists.txt
source/utils/: CMakeLists.txt  math.cpp  string.cpp
test/UT/: .clang-tidy  CMakeLists.txt  EventLoopTests.cpp  ExecutionQueueTests.cpp  FunctionTests.cpp  MemoryPoolTests.cpp  ObserverTests.cpp  ObservingListTests.cpp  Runner.cpp
test/UT/container/: CMakeLists.txt  RingBufferTests.cpp  StaticDequeTests.cpp  StaticVectorTests.cpp
test/UT/container/iterator/: IndexConstIteratorTests.cpp  IndexIteratorTests.cpp
test/UT/container/observable/: ObservingListTests.cpp
test/UT/crc/: CMakeLists.txt  Crc10Tests.cpp  Crc11Tests.cpp  Crc12Tests.cpp  Crc13Tests.cpp  Crc14Tests.cpp  Crc15Tests.cpp  Crc16Tests.cpp  Crc17Tests.cpp  Crc21Tests.cpp  Crc24Tests.cpp  Crc30Tests.cpp  Crc31Tests.cpp  Crc32Tests.cpp  Crc3Tests.cpp  Crc40Tests.cpp  Crc4Tests.cpp  Crc5Tests.cpp  Crc64Tests.cpp  Crc6Tests.cpp  Crc7Tests.cpp  Crc8Tests.cpp  CrcForString.cpp  CrcTestBase.hpp  CrcUtilsTests.cpp
test/UT/error/: CMakeLists.txt  ErrorCategoryTests.cpp  ErrorCodeTests.cpp  ErrorConditionTests.cpp
test/UT/execution/: CMakeLists.txt  EventLoopTests.cpp  ExecutionQueueTests.cpp
test/UT/filesystem/: CMakeLists.txt  PathConstIteratorTests.cpp  PathTests.cpp
test/UT/functional/: CMakeLists.txt  FunctionTests.cpp
test/UT/kernel/: CMakeLists.txt  KernelTests.cpp
test/UT/logger/: CMakeLists.txt  ExpectStream.cpp  ExpectStream.hpp  LoggerTests.cpp  LoggerTestsDebugPolicy.cpp  LoggerTestsDisabledPolicy.cpp  LoggerTestsErrorPolicy.cpp  LoggerTestsInfoPolicy.cpp  LoggerTestsTracePolicy.cpp  LoggerTestsWarningPolicy.cpp  TimeProviderStub.cpp  TimeProviderStub.hpp
test/UT/math/: CMakeLists.txt  MatrixTests.cpp  VectorTests.cpp
test/UT/memory/: CMakeLists.txt  ObservableObjectTests.cpp  ObserverTests.cpp
test/UT/memory/pool/: CMakeLists.txt  MemoryPoolTests.cpp
test/UT/mpl/: CMakeLists.txt  FilterTests.cpp  InheritFromTests.cpp
test/UT/mpl/mixin/: CMakeLists.txt  FilterTests.cpp  InheritFromTests.cpp  MixinTests.cpp
test/UT/mpl/tuples/: CMakeLists.txt  ExtendTests.cpp  FilterTests.cpp
test/UT/mpl/types/: BindTypeTests.cpp  CMakeLists.txt  GetIndexOfBindedKeyTests.cpp
test/UT/signals/: CMakeLists.txt  SignalTests.cpp
test/UT/timer/: CMakeLists.txt  TimeoutTimerTests.cpp  TimerManagerTests.cpp  TimerTests.cpp
test/UT/utils/: CMakeLists.txt  MathTests.cpp  StringTests.cpp
(+171 files in other folders)
